<resources>
    <string name="app_name">KeepFresh</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">KeepFresh</string>
    <string name="nav_header_desc">Navigation header</string>

    <!--    Navigation bar-->
    <string name="menu_input">Add Item</string>
    <string name="menu_inventory">Food Inventory</string>
    <string name="menu_preference">Notification Preference</string>
    <string name="menu_waste">Waste Analysis</string>

    <!--    Fragment Input-->
    <string name="photo_food">Food Photo</string>
    <string name="btn_change_photo">Change</string>
    <string name="hint_food_name">Enter Food Name</string>
    <string name="hint_expiration_date">Enter Expiration Date</string>
    <string name="hint_cost">Enter Food Cost ($)</string>
    <string name="btn_save">Save</string>
    <string name="btn_cancel">Cancel</string>
    <string-array name="time_units">
        <item>Days</item>
        <item>Months</item>
        <item>Years</item>
    </string-array>

    <string name="btn_delete">DELETE</string>
    <string name="barcode">Barcode</string>
    <string name="cancel">Cancel</string>
    <string name="confirm">Confirm</string>
</resources>