<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_input">

    <fragment
        android:id="@+id/nav_input"
        android:name="com.example.keepfresh.ui.foodInput.FoodInputFragment"
        android:label="@string/menu_input"
        tools:layout="@layout/fragment_input" />

    <fragment
        android:id="@+id/nav_inventory"
        android:name="com.example.keepfresh.ui.foodInventory.FoodInventoryFragment"
        android:label="@string/menu_inventory"
        tools:layout="@layout/fragment_inventory">

        <action
            android:id="@+id/action_foodInventoryFragment_to_foodDetailFragment"
            app:destination="@id/foodDetailFragment" />
    </fragment>



    <fragment
        android:id="@+id/waste_analysis"
        android:name="com.example.keepfresh.ui.wasteAnalysis.WasteAnalysisFragment"
        android:label="@string/menu_waste"
        tools:layout="@layout/fragment_waste_analysis"/>

    <fragment
        android:id="@+id/nav_preference"
        android:name="com.example.keepfresh.ui.preference.PreferenceFragment"
        android:label="@string/menu_preference"
        tools:layout="layout/fragment_preference"/>

    <fragment
        android:id="@+id/foodDetailFragment"
        android:name="com.example.keepfresh.ui.foodInventory.FoodDetailFragment"
        tools:layout="@layout/fragment_detail_food">
        <argument
            android:name="foodId"
            app:argType="long"/>
    </fragment>

</navigation>