<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.foodInput.FoodInputFragment">

    <!--    Input Food Picture-->
    <TextView
        android:layout_width = "wrap_content"
        android:layout_height = "wrap_content"
        android:padding="16dp"
        android:text = "@string/photo_food"/>

    <LinearLayout
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:orientation = "horizontal"
        android:padding="16dp">

        <ImageView
            android:id = "@+id/photo_food"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            android:src="@drawable/ic_placeholder"
            android:layout_marginHorizontal="70dp">
        </ImageView>

        <Button
            android:id = "@+id/btn_change_photo"
            android:layout_width = "wrap_content"
            android:layout_height = "wrap_content"
            android:layout_gravity = "center_vertical"
            android:text = "@string/btn_change_photo">
        </Button>
    </LinearLayout>


    <!--    Input Food Name or Scan Barcode-->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_food_layout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/hint_food_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toStartOf="@id/barcodeIcon">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_food_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />
        </com.google.android.material.textfield.TextInputLayout>

        <ImageView
            android:id="@+id/barcodeIcon"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:src="@drawable/ic_barcode_scanner"
            app:layout_constraintStart_toEndOf="@id/input_food_layout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@id/input_food_layout"
            app:layout_constraintBottom_toBottomOf="@id/input_food_layout"
            android:padding="8dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--    Input Expiration Date -->
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:hint="@string/hint_expiration_date">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/input_expiration_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:inputType="date"/>

    </com.google.android.material.textfield.TextInputLayout>

    <!--   Buttons -->
    <LinearLayout
        android:layout_width = "match_parent"
        android:layout_height = "wrap_content"
        android:orientation="horizontal"
        android:gravity="center_horizontal">

        <Button
            android:id="@+id/btn_save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/btn_save"
            android:paddingHorizontal="50dp"
            android:layout_marginEnd="8dp">
        </Button>

        <Button
            android:id="@+id/btn_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="50dp"
            android:text="@string/btn_cancel">
        </Button>
    </LinearLayout>


</LinearLayout>

